tests/interpreter_directive/test.js
#!/bin/env node
// @flow

(1: string); // error
